{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 20,
  "lineage": "d2454cd0-c192-c8c3-318b-a5b31c35e567",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_server_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/frontendIPConfigurations/web-server-lb-frontend-ip",
                "name": "web-server-lb-frontend-ip",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip"
              }
            ],
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "location": "eastus",
            "name": "web-server-lb",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web_server_lb_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/backendAddressPools/web-server-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-backend-pool",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_server_lb",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "web_server_lb_http_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/probes/web-server-lb-http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-http-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_server_lb",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "web_server_lb_http_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/backendAddressPools/web-server-lb-backend-pool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/frontendIPConfigurations/web-server-lb-frontend-ip",
            "frontend_ip_configuration_name": "web-server-lb-frontend-ip",
            "frontend_port": 80,
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/loadBalancingRules/web-server-lb-http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb",
            "name": "web-server-lb-http-rule",
            "probe_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/loadBalancers/web-server-lb/probes/web-server-lb-http-probe",
            "protocol": "Tcp",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_lb.web_server_lb",
            "azurerm_lb_backend_address_pool.web_server_lb_backend_pool",
            "azurerm_lb_probe.web_server_lb_http_probe",
            "azurerm_public_ip.web_server_lb_public_ip",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_server_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "location": "eastus",
            "name": "web-server-nsg",
            "resource_group_name": "web-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/HTTP Inbound",
            "name": "HTTP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_server_nsg_rule_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg/securityRules/RDP Inbound",
            "name": "RDP Inbound",
            "network_security_group_name": "web-server-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "web-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_server_lb_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/publicIPAddresses/web-server-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "web-server-public-ip",
            "resource_group_name": "web-rg",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_server_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "AzureBastionSubnet",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        },
        {
          "index_key": "web-server",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "1.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server",
            "name": "web-server",
            "resource_group_name": "web-rg",
            "virtual_network_name": "web-server-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_server_sag",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server",
            "network_security_group_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/networkSecurityGroups/web-server-nsg",
            "subnet_id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet/subnets/web-server"
          },
          "dependencies": [
            "azurerm_network_security_group.web_server_nsg",
            "azurerm_resource_group.web_server_rg",
            "azurerm_subnet.web_server_subnet",
            "azurerm_virtual_network.web_server_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "web_server_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "1.0.0.0/22"
            ],
            "id": "/subscriptions/5c571efe-8a9b-42fb-b305-ad936799a599/resourceGroups/web-rg/providers/Microsoft.Network/virtualNetworks/web-server-vnet",
            "location": "eastus",
            "name": "web-server-vnet",
            "resource_group_name": "web-rg"
          },
          "dependencies": [
            "azurerm_resource_group.web_server_rg"
          ]
        }
      ]
    }
  ]
}